@@ -1,5 +1,5 @@
 /*
- * Copyright 2012-2022 the original author or authors.
+ * Copyright 2012-2020 the original author or authors.
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -29,6 +29,7 @@ import java.nio.charset.StandardCharsets;
 import java.util.ArrayList;
 import java.util.Collections;
 import java.util.List;
+import java.util.stream.Collectors;
 
 /**
  * A class path index file that provides ordering information for JARs.
@@ -44,7 +45,7 @@ final class ClassPathIndexFile {
 
 	private ClassPathIndexFile(File root, List<String> lines) {
 		this.root = root;
-		this.lines = lines.stream().map(this::extractName).toList();
+		this.lines = lines.stream().map(this::extractName).collect(Collectors.toList());
 	}
 
 	private String extractName(String line) {
@@ -66,7 +67,7 @@ final class ClassPathIndexFile {
 	}
 
 	List<URL> getUrls() {
-		return this.lines.stream().map(this::asUrl).toList();
+		return Collections.unmodifiableList(this.lines.stream().map(this::asUrl).collect(Collectors.toList()));
 	}
 
 	private URL asUrl(String line) {
